<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/WHITE"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/appicon"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="30dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/emaillayout"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/passwordlayout"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/loginButton"
        android:onClick="login"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/l_o_g_i_n"/>


</LinearLayout>