<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/WHITE"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/person_high" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/fullnamereg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                android:inputType="text"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emaillayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/emailreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="100"
            layout="@layout/layout_datechoose"/>


        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:onClick="register"
            android:text="@string/s_i_g_n_u_p" />

    </LinearLayout>

</ScrollView>